<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/app_bar_height"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic[18]"
                    android:id="@+id/imgComicEventBanner"
                    android:contentDescription="@string/banner_for_collapsing_toolbar"
                    android:scaleType="fitCenter"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/comicToolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                    android:id="@+id/txtComicTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Comic_Name"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">


            <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtComicCreators"
                    android:id="@+id/rclComicCreator"
                    android:nestedScrollingEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.121"/>
            <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginTop="@dimen/margin_title_comic_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txtCharactersDetail"
                    android:id="@+id/rclComicCharacters"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/margin_title_comic_detail"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.12"/>
            <TextView
                    android:text="@string/comic_creators"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtComicCreators"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtComicDetail"
                    app:layout_constraintHorizontal_bias="0.164"
                    android:textSize="@dimen/comic_detail_character_title" android:textStyle="bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCharactersDetail"
                    app:layout_constraintTop_toBottomOf="@+id/rclComicCreator" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.172"
                    android:layout_marginTop="@dimen/characters_comic_detail_margin_top"
                    android:text="@string/comic_details"
                    android:textSize="@dimen/comic_detail_character_title"
                    android:textStyle="bold"/>
            <TextView
                    tools:text="@string/comic_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtComicDetail" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold|italic"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtComicName"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/progress_bar"
                    android:layout_height="@dimen/progress_bar"
                    android:id="@+id/prgCreators" app:layout_constraintStart_toEndOf="@+id/rclComicCreator"
                    android:layout_marginTop="@dimen/margin_title_comic_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txtComicCreators" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/cardview_character_margin" app:layout_constraintHorizontal_bias="0.202"
                    android:visibility="visible" android:layout_marginStart="@dimen/margin_title_comic_detail"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/progress_bar"
                    android:layout_height="@dimen/progress_bar"
                    android:id="@+id/prgCharacters" app:layout_constraintStart_toEndOf="@+id/rclComicCharacters"
                    android:layout_marginStart="@dimen/cardview_character_margin"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/cardview_character_margin"
                    app:layout_constraintHorizontal_bias="0.196"
                    android:visibility="visible" android:layout_marginTop="@dimen/margin_title_comic_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txtCharactersDetail"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtComicName" android:layout_marginTop="44dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:textStyle="bold" android:textSize="18sp"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
    <ToggleButton
            android:layout_width="@dimen/starComicDetail"
            android:layout_height="@dimen/starComicDetail"
            android:id="@+id/tglFavorite"
            android:background="@drawable/favorite_toggle_button"
            android:textOn="@string/empty_string"
            android:textOff="@string/empty_string"
            app:layout_anchor="@+id/app_bar"
            app:layout_anchorGravity="right|bottom"/>

   </android.support.design.widget.CoordinatorLayout>